--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,10 @@ Django
 djangorestframework
 django-cors-headers
 psycopg2-binary
+django-cors-headers==4.2.0
+django-filter==22.1
+django-rest-swagger==2.2.0
+djangorestframework==3.14.0
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.5
