--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
   db:
     image: postgres:15
     container_name: postgres_db
+    networks:
+      - app_network
     environment:
       - POSTGRES_USER=weef
       - POSTGRES_PASSWORD=postgres
@@ -18,6 +20,8 @@ services:
       context: ./backend/
       dockerfile: Dockerfile
     container_name: backend
+    networks:
+      - app_network
     volumes:
       - ./backend:/app
     ports:
@@ -41,12 +45,19 @@ services:
       context: ./frontend/
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "5173:5173"
     stdin_open: true
     depends_on:
       - backend
+    command: npm run dev -- --host 0.0.0.0
     environment:
       - REACT_APP_BACKEND_URL=http://backend:8000
+    networks:
+      - app_network
 
 volumes:
   pgdata:
+
+networks:
+  app_network:
+    driver: bridge
