--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:22.11
+FROM node:18-alpine
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-EXPOSE 3000
-CMD ["npm", "start"]
+
+EXPOSE 5173
+
+CMD [ "npm", "run", "dev" ]
